--- a/.github/workflows/drawio.yml
+++ b/.github/workflows/drawio.yml
@@ -32,6 +32,15 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: sudo snap install drawio
 
+      - name: Install Xvfb
+        run: sudo apt-get install -y xvfb
+
+      - name: Start Xvfb
+        run: Xvfb :99 -screen 0 1024x768x24 &
+
+      - name: Set DISPLAY environment variable
+        run: echo "::set-env name=DISPLAY::99"
+
       - name: Convert .drawio to .png
         run: |
           for file in $(find img -name "*.drawio"); do
