--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=demo
 # using default mongo DB data base
-spring.data.mongodb.uri=mongodb://root:pass@mongo:27017/test
+spring.data.mongodb.uri=mongodb://root:pass@localhost:27017/test
