--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=demo
 # using default mongo DB data base
-spring.data.mongodb.uri=mongodb://root:pass@localhost:27017/test
+# spring.data.mongodb.uri=mongodb://root:pass@localhost:27017/test?authSource=admin
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=test
+spring.data.mongodb.username=root
+spring.data.mongodb.password=pass
+spring.data.mongodb.authentication-database=admin
