--- a/mongo.yml
+++ b/mongo.yml
@@ -8,6 +8,7 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: pass
+      MONGO_INITDB_DATABASE: admin
 
   mongo-express:
     image: mongo-express
