--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,3 @@
 spring.application.name=demo
 # using default mongo DB data base
-# spring.data.mongodb.uri=mongodb://testUser:testPass@localhost:27017/test?authSource=admin
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=test
-spring.data.mongodb.username=testUser
-spring.data.mongodb.password=testPass
-spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.uri=mongodb://root:pass@localhost:27017/demo
