--- a/mongo.yml
+++ b/mongo.yml
@@ -1,6 +1,6 @@
 services:
 
-  mongo:
+  mongo_db:
     image: mongo
     restart: always
     ports:
@@ -17,5 +17,7 @@ services:
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: pass
-      ME_CONFIG_MONGODB_URL: mongodb://root:pass@localhost:27017/
+      ME_CONFIG_MONGODB_URL: mongodb://root:pass@mongo_db:27017/
       ME_CONFIG_BASICAUTH: false
+    depends_on:
+      - mongo_db
