--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=demo
 # using default mongo DB data base
-spring.data.mongodb.uri=mongodb://root:pass@localhost:27017/demo
+# must use authMechanism=SCRAM-SHA-1 as latest Mongo libraries don't support mongo 7.x authentication mechanism, i.e. SCRAM-SHA-256
+spring.data.mongodb.uri=mongodb://root:pass@localhost:27017/demo?authSource=admin&authMechanism=SCRAM-SHA-1
+logging.level.org.springframework.data.mongodb=DEBUG
